[package]
name = "rust-crypto-ed25519"
version = "0.1.0"
authors = ["Yu Changyuan <reivzy@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
#opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-crypto-wasm = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

